fix img float for img .alignleft

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1598,7 +1598,7 @@ textarea {
     color: #000;
 }
 
-.wp-caption.alignleft {
+.alignleft {
     float: left;
     margin: 0 20px 20px 0;
 }
